Opened 21 months ago
Closed 21 months ago
#18445 closed bug (fixed)
Teapot application halts after a few seconds
Reported by: | WildKeccak | Owned by: | waddlesplash |
---|---|---|---|
Priority: | critical | Milestone: | R1/beta5 |
Component: | System | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
hrev 57078 x86_64
Intel Celeron N4120
~4GB Ram
Attachments (2)
Change History (5)
by , 21 months ago
Attachment: | 2023-06-12_04-54.png added |
---|
by , 21 months ago
Attachment: | 2023-06-12_04-56.png added |
---|
Demonstrates that indeed, the teapot has crashed
comment:1 by , 21 months ago
Please attach Debugger, set all threads to "Debugged", and then "save report" and upload it here.
comment:2 by , 21 months ago
Component: | - General → System |
---|---|
Milestone: | Unscheduled → R1/beta5 |
Owner: | changed from | to
Platform: | x86-64 → All |
Priority: | normal → critical |
Status: | new → assigned |
Version: | → R1/Development |
Never mind, I managed to reproduce it. It's a deadlock in pthread condition variables. Seems some regression has been introduced with recent changes.
Note:
See TracTickets
for help on using tickets.
Picture of Hung Teapot